--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,37 @@
-/* You can add global styles to this file, and also import other style files */
+:root{
+    --background-color: rgb(15 ,23 ,42);
+    --teal: rgb(94 ,234 ,212);
+    --dull-blue: 148 163 184;
+    --white: 255 255 255
+}
+
+body {
+    background: var(--background-color);
+    color: rgb(var(--dull-blue));
+    margin: 0;
+    padding: 0 3rem;
+    font-family: ui-sans-serif,system-ui,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,"Noto Sans",sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji"
+    // min-height: 100vh;
+    // display: flex;
+    // flex-direction: column;
+    // align-items: center;
+    // justify-content: center;
+    // overflow: hidden;
+  }
+  
+  .cursor-glow {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 40vw;
+    height: 40vw;
+    border-radius: 50%;
+    background: radial-gradient(circle, rgba(0, 200, 255, 0.1), transparent 70%);
+    // filter: blur(20px);
+    // mix-blend-mode: screen; 
+    transform: translate(-50%, -50%);
+  }
+  .white-highlight{
+    color: rgb(var(--white));
+  }
+  
