--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,7 +1,7 @@
 <div class="header-container">
     <div>
         <h1>Kapil Mehtani</h1>
-        <h3>Frontend Developer</h3>
+        <h3>Senior Software Engineer</h3>
         <div>I am a Frontend developer creating great user experience for the users.</div>
         <div class="section-headers">
             <div class="header" [ngClass]="{'active': activeID=='ABOUT'}" (click)="scrolltosection('ABOUT')"><span></span>ABOUT</div>
